event controller (still need to continue and fix the error for not saving into the db)

--- a/public/css/partial-css/partial.css
+++ b/public/css/partial-css/partial.css
@@ -482,6 +482,7 @@ body::-webkit-scrollbar {
 #wlcm_card{
     background-color: transparent;
     box-shadow: none;
+    border: none;
 }
 
 /*current attendees table*/
